@@ -27,6 +27,7 @@ Version 1.1.2 to be released
 - Enh #1071: Optimized file copying in CUploadedFile::saveAs() (Sam Dark)
 - Enh #1084: Added CLocale::getOrientation() to return character orientation information of a locale (Qiang)
 - Enh #1091: Added support to allow using normal PHP views with special views recognized by the installed view renderer (Qiang)
+- Enh #1140: Added CHttpSession::get() (Qiang)
 - Enh: CCaptchaAction now supports unlimited tests by setting its testLimit to be 0 (Qiang)
 - Enh: Added $forceCopy parameter to CAssetManager::publish() (Qiang)
 - Enh: CTypeValidator now supports checking array data (Qiang)
